--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.84.2",
     "@react-three/fiber": "^8.14.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.4",
     "maath": "^0.9.0",
     "react": "^18.2.0",
