--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "change-case": "^5.1.2",
     "framer-motion": "^10.16.4",
     "maath": "^0.9.0",
     "path-browserify": "^1.0.1",
