--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
-AZURE_DATABASE_CONNECTION_STRING=
-# AZURE_DATABASE_USERNAME=
-AZURE_DATABASE_PASSWORD=
-
-MODE=DEBUG
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
