--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.env*
+*.env
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -164,3 +164,4 @@ cython_debug/
 #.idea/
 
 backend/secrets/*
+*backend/.env
