--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "change-case": "^5.1.2",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "maath": "^0.9.0",
     "path-browserify": "^1.0.1",
